fix: config mount

--- a/components/app/deployment.yaml
+++ b/components/app/deployment.yaml
@@ -23,7 +23,7 @@ spec:
               protocol: TCP
           volumeMounts:
             - name: data
-              mountPath: /data
+              mountPath: /config
             - name: usenet
               mountPath: /usenet
       volumes:
