--- a/components/app/deployment.yaml
+++ b/components/app/deployment.yaml
@@ -41,7 +41,7 @@ spec:
         - name: backup
           persistentVolumeClaim:
             claimName: backup-pvc
-        - name: usenet
+        - name: videos
           hostPath:
             path: /media/videos
             type: Directory
