--- a/installs/default/kustomization.yaml
+++ b/installs/default/kustomization.yaml
@@ -5,6 +5,9 @@ resources:
   - ../../components/app
 namespace: "sabnzbd"
 namePrefix: "sabnzbd-"
+images:
+  - name: "linuxserver/sabnzbd"
+    newTag: "4.0.1"
 configMapGenerator:
   - name: app-config
     envs:
